@@ -1,0 +1,9 @@
+#include "creditsimpl.h"
+//
+CreditsImpl::CreditsImpl( QWidget * parent, Qt::WFlags f) 
+	: QDialog(parent, f)
+{
+	setupUi(this);
+}
+//
+
