@@ -30,6 +30,8 @@
 //
 #include "ui_information.h"
 //
+#include "creditsimpl.h"
+//
 #include "../programversion.h"
 #include "../options.h"
 #include "../languages.h"
@@ -39,5 +41,7 @@ class InformationImpl : public QDialog, public Ui::Information
 Q_OBJECT
 	public:
 		InformationImpl(ProgramOptions *programOptions, QWidget * parent = 0, Qt::WFlags f = 0);
+	private slots:
+		void btnCreditsClicked();
 };
 #endif
