@@ -280,6 +280,19 @@ p, li { white-space: pre-wrap; }
         </spacer>
        </item>
        <item>
+        <widget class="QPushButton" name="btnCredits" >
+         <property name="minimumSize" >
+          <size>
+           <width>106</width>
+           <height>25</height>
+          </size>
+         </property>
+         <property name="text" >
+          <string>Credits...</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="btnAddVideo" >
          <property name="sizePolicy" >
           <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
