@@ -27,7 +27,11 @@
     </widget>
    </item>
    <item row="1" column="0" >
-    <widget class="QTextEdit" name="rchInformation" />
+    <widget class="QTextEdit" name="rchInformation" >
+     <property name="readOnly" >
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
    <item row="2" column="0" >
     <layout class="QHBoxLayout" >
